--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,7 +3,11 @@ name: ci
 on:
   push:
     branches:
-      - "main"
+      - "docker-build"
+
+permissions:
+  contents: read
+
 
 jobs:
   build:
