--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,17 @@ plugins {
 }
 
 group = 'com'
-version = '0.0.1-SNAPSHOT'
+//version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+}
+
+jar {
+    enabled = false
 }
 
 repositories {
