change authentication to match db in docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/snippets
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://db:5432/snippets
+spring.datasource.username=postgres
+spring.datasource.password=password
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
