--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,6 +26,9 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
+        name: Build the stack
+        run: docker-compose up -d
+      -
         name: Build and push
         uses: docker/build-push-action@v4
         with:
