--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Docker build
+name: Docker Build & Push
 
 on:
   push:
@@ -8,31 +8,41 @@ on:
 permissions:
   contents: read
 
-
 jobs:
-  build:
+  checkout:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Login to Docker Hub
+      - name: Checkout
+        uses: actions/checkout@v2
+
+  login:
+    runs-on: ubuntu-latest
+    needs: checkout
+    steps:
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up Docker Buildx
+
+  build:
+    runs-on: ubuntu-latest
+    needs: login
+    steps:
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Build the stack
-        run: docker-compose up -d
-      -
-        name: Build and push
+
+      - name: Build the stack
+        run: docker-compose build
+
+  push:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Push to Docker Hub
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pastebin:latest
