--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,8 +32,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build the stack
-        run: docker-compose build
+      - name: Build and push
+        uses: docker/compose-action@v2
+        with:
+          compose-file: docker-compose.yml
+          context: .
 
   push:
     runs-on: ubuntu-latest
