--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build and push
-        uses: docker/compose-action@v2
+        uses: docker/build-push-action@v4
         with:
           compose-file: docker-compose.yml
           context: .
