--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,27 +5,27 @@ on:
     branches:
       - "docker-build"
 
-permissions:
-  contents: read
-
 jobs:
   checkout:
+    name: Checkout Code
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
   login:
+    name: Login to Docker Hub
     runs-on: ubuntu-latest
     needs: checkout
     steps:
-      - name: Login to Docker Hub
+      - name: Login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
   build:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: login
     steps:
@@ -39,6 +39,7 @@ jobs:
           context: .
 
   push:
+    name: Push Docker Image to Docker Hub
     runs-on: ubuntu-latest
     needs: build
     steps:
