--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,41 +5,37 @@ on:
     branches:
       - "docker-build"
 
+permissions:
+  contents: read
+
 jobs:
   checkout:
-    name: Checkout Code
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
   login:
-    name: Login to Docker Hub
     runs-on: ubuntu-latest
     needs: checkout
     steps:
-      - name: Login
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
   build:
-    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: login
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          compose-file: docker-compose.yml
-          context: .
+      - name: Build the stack
+        run: docker-compose build
 
   push:
-    name: Push Docker Image to Docker Hub
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -48,5 +44,3 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pastebin:latest
