--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,7 +33,11 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build the stack
-        run: docker-compose build
+#        run: docker-compose build
+        uses: docker/build-push-action@v4
+        with:
+          compose-file: docker-compose.yml
+          context: .
 
   push:
     runs-on: ubuntu-latest
