--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build the stack
-#        run: docker-compose build
+        #        run: docker-compose build
         uses: docker/build-push-action@v4
         with:
           compose-file: docker-compose.yml
@@ -47,4 +47,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: Dockerfile
