--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - db_data:/var/lib/postgresql/data
 
   app:
-    build: .
+    build: ./Dockerfile
     ports:
       - "8080:8080"
     depends_on:
