--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,14 +30,14 @@ jobs:
     needs: login
     steps:
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/build-push-action@v4.0.0
 
       - name: Build the stack
-        #        run: docker-compose build
-        uses: docker/build-push-action@v4
-        with:
-          compose-file: docker-compose.yml
-          context: .
+        run: docker-compose build
+#        uses: docker/build-push-action@v4
+#        with:
+#          compose-file: docker-compose.yml
+#          context: .
 
   push:
     runs-on: ubuntu-latest
