--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,6 +31,9 @@ jobs:
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        
+      - name: debug compose
+        run: pwd
 
       - name: Build and push
         uses: docker/compose-action@v2
