--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,11 +30,12 @@ jobs:
     needs: login
     steps:
       - name: Build the stack
-#        run: docker-compose build
-        uses: docker/build-push-action@v4
-        with:
-          compose-file: docker-compose.yml
-          context: .
+      
+        run: docker-compose build
+#        uses: docker/build-push-action@v4
+#        with:
+#          compose-file: docker-compose.yml
+#          context: .
 
   push:
     runs-on: ubuntu-latest
