--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,13 +29,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: login
     steps:
-      - name: Build the stack
-      
-#        run: docker-compose build
-        uses: docker/build-push-action@v4
-        with:
-          compose-file: ./docker-compose.yml
-          context: .
+      - name: Build the stack      
+        run: docker-compose build
 
   push:
     runs-on: ubuntu-latest
