--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,14 +24,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
+          
   build:
     runs-on: ubuntu-latest
     needs: login
     steps:
       - name: Build the stack      
         run: docker-compose build --file ./docker-compose.yml
-
+  
   push:
     runs-on: ubuntu-latest
     needs: build
@@ -40,4 +40,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: Dockerfile
+          file: ./Dockerfile
