--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -41,3 +41,8 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pastebin:latest
+        with:
+          context: .
+          file: ./Dockerfile
