--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,4 +42,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pastebin:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
