--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -41,4 +41,4 @@ jobs:
         with:
           file: ./Dockerfile
           push: true
-          tags: latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pastebin:1.0
