--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v4.3.0
+        with: pastebin/api
 
   build:
     runs-on: ubuntu-latest
