--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,7 +29,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4.3.0
         with: 
-          images: pastebin/api
+          images: npvietkhoa/pastebin
 
   build:
     runs-on: ubuntu-latest
@@ -46,6 +46,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
