--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,17 +31,9 @@ jobs:
         with: 
           images: npvietkhoa/pastebin
 
-  build:
-    runs-on: ubuntu-latest
-    needs: login
-    steps:
-      - name: Build the stack      
+      - name: Build the stack
         run: docker-compose build --file ./docker-compose.yml
-        
-  push:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
+
       - name: Push to Docker Hub
         uses: docker/build-push-action@v4
         with:
@@ -49,3 +41,21 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+#  build:
+#    runs-on: ubuntu-latest
+#    needs: login
+#    steps:
+#      - name: Build the stack
+#        run: docker-compose build --file ./docker-compose.yml
+#
+#  push:
+#    runs-on: ubuntu-latest
+#    needs: build
+#    steps:
+#      - name: Push to Docker Hub
+#        uses: docker/build-push-action@v4
+#        with:
+#          context: .
+#          push: true
+#          tags: ${{ steps.meta.outputs.tags }}
+#          labels: ${{ steps.meta.outputs.labels }}
