--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-  login:
+  build and push:
     runs-on: ubuntu-latest
     needs: checkout
     steps:
@@ -37,25 +37,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v4
         with:
-          file: ./Dockerfile
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-#  build:
-#    runs-on: ubuntu-latest
-#    needs: login
-#    steps:
-#      - name: Build the stack
-#        run: docker-compose build --file ./docker-compose.yml
-#
-#  push:
-#    runs-on: ubuntu-latest
-#    needs: build
-#    steps:
-#      - name: Push to Docker Hub
-#        uses: docker/build-push-action@v4
-#        with:
-#          context: .
-#          push: true
-#          tags: ${{ steps.meta.outputs.tags }}
-#          labels: ${{ steps.meta.outputs.labels }}
