--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-  build and push:
+  docker-build-push:
     runs-on: ubuntu-latest
     needs: checkout
     steps:
