--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,10 +31,7 @@ jobs:
         with: 
           images: npvietkhoa/pastebin
 
-      - name: Build the stack
-        run: docker-compose build --file ./docker-compose.yml
-
-      - name: Push to Docker Hub
+      - name: Build and push to Docker Hub
         uses: docker/build-push-action@v4
         with:
           file: ./docker-compose.yml
