--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build and push to Docker Hub
         uses: docker/build-push-action@v4
         with:
-          file: ./docker-compose.yml
+          file: docker-compose.yml
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
