--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - "master"
+    paths-ignore:
+      - '**/README.md'
+      - '**/workflows'
 
 permissions:
   contents: read
