--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,8 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "oop-hierarchy" ]
+    branches: 
+      - oop-hierarchy
   pull_request:
     branches: [ "master" ]
 
