--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,7 +12,9 @@ on:
     branches: 
       - oop-hierarchy
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
+      - oop-hierarchy
 
 permissions:
   contents: read
